kubernetes/1base.yml
apiVersion: v1
kind: Namespace
metadata:
  name: examen
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: examen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: examen
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30432
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: central
  namespace: examen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: central
  template:
    metadata:
      labels:
        app: central
    spec:
      containers:
        - name: central
          image: javier2h2/ms-central:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: central
  namespace: examen
spec:
  selector:
    app: central
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facturacion
  namespace: examen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: facturacion
  template:
    metadata:
      labels:
        app: facturacion
    spec:
      containers:
        - name: facturacion
          image: javier2h2/ms-facturacion:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: facturacion
  namespace: examen
spec:
  selector:
    app: facturacion
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30002
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventario
  namespace: examen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventario
  template:
    metadata:
      labels:
        app: inventario
    spec:
      containers:
        - name: inventario
          image: javier2h2/ms-inventario:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: inventario
  namespace: examen
spec:
  selector:
    app: inventario
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30003
  type: NodePort
