kubernetes/2backend.yml
apiVersion: v1
kind: Namespace
metadata:
  name: examen
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: central
  namespace: examen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: central
  template:
    metadata:
      labels:
        app: central
    spec:
      containers:
        - name: central
          image: javier2h2/ms-central:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: central
  namespace: examen
spec:
  selector:
    app: central
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30001
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facturacion
  namespace: examen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: facturacion
  template:
    metadata:
      labels:
        app: facturacion
    spec:
      containers:
        - name: facturacion
          image: javier2h2/ms-facturacion:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: facturacion
  namespace: examen
spec:
  selector:
    app: facturacion
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30002
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventario
  namespace: examen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventario
  template:
    metadata:
      labels:
        app: inventario
    spec:
      containers:
        - name: inventario
          image: javier2h2/ms-inventario:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: inventario
  namespace: examen
spec:
  selector:
    app: inventario
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30003
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: examen-ingress
  namespace: examen
spec:
  rules:
    - host: central.examen
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: central
                port:
                  number: 8080
    - host: facturacion.examen
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: facturacion
                port:
                  number: 8080
    - host: inventario.examen
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inventario
                port:
                  number: 8080
#se debe agregar el dominio en /etc/hosts
#sudo bash -c "echo $(minikube ip) central.examen facturacion.examen inventario.examen >> /etc/hosts"
